implementado buscaTodosSocios, testes ok