@@ -1,10 +1,10 @@
 package com.desbravadores.terras.desbravadores.application.api;
 
-import java.time.LocalDate;
 import java.util.List;
 import java.util.UUID;
 import java.util.stream.Collectors;
 
+import com.desbravadores.terras.desbravadores.domain.Endereco;
 import com.desbravadores.terras.desbravadores.domain.Sexo;
 import com.desbravadores.terras.desbravadores.domain.SocioCT;
 
@@ -14,23 +14,27 @@ import lombok.Value;
 public class SocioListResponse {
 	private UUID idSocio;
 	private String nome;
+	private String cpf;
 	private Sexo sexo;
 	private Integer idade;
-	private LocalDate dataDeNascimento;
+	private String telefone;
+	private Endereco endereco;
 
 	public static List<SocioListResponse> converte(List<SocioCT> socios) {
 		return socios.stream()
 				.map(SocioListResponse::new)
-				.collect(Collectors.toList());
-		
-	
+				.collect(Collectors
+						.toList());
 	}
+
 	public SocioListResponse(SocioCT socio) {
 		this.idSocio = socio.getIdSocio();
 		this.nome = socio.getNome();
+		this.cpf = socio.getCpf();
 		this.sexo = socio.getSexo();
 		this.idade = socio.getIdade();
-		this.dataDeNascimento = socio.getDataDeNascimento();
-	} 
+		this.telefone = socio.getTelefone();
+		this.endereco = socio.getEndereco();
+	}
 
 }
